/surveys
- update controllers.py for surveys list business logic
- add new model for new surveys table on the `config_sandbox` schema
- remove constraint checks
- add to_dict function on model
- update documentation
