# flask_app/openapi/surveystream.yml
@@ -455,49 +455,78 @@ paths:
   /surveys:
     get:
       summary: Get surveys
-      description: Return the logged in user's survey information
+      description: Returns information about surveys associated with the logged in user.
       tags:
         - Surveys
+      parameters:
+        - in: query
+          name: user_uid
+          schema:
+            type: integer
+          description: Optional user ID to retrieve surveys for. If not provided, surveys for the logged in user will be returned.
       responses:
         "200":
-          description: OK
+          description: Successful response
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    survey_id:
-                      type: string
-                      description: The ID of the survey
-                    survey_name:
-                      type: string
-                      description: The name of the survey
-                    active:
-                      type: boolean
-                      description: Whether the survey is currently active
-                    forms:
-                      type: array
-                      description: Parent forms associated with the survey
-                      items:
-                        type: object
-                        properties:
-                          form_uid:
-                            type: integer
-                            description: The unique ID of the form
-                          form_name:
-                            type: string
-                            description: The name of the form
-                          scto_form_id:
-                            type: string
-                            description: The form's SurveyCTO form ID
-                          planned_start_date:
-                            type: string
-                            description: Isoformatted start date of the form
-                          planned_end_date:
-                            type: string
-                            description: Isoformatted end date of the form
+                type: object
+                properties:
+                  data:
+                    type: array
+                    description: An array of surveys belonging to the specified user or all users if no user_uid is provided.
+                    items:
+                      type: object
+                      properties:
+                        survey_uid:
+                          type: integer
+                          description: The unique ID of the survey.
+                        survey_id:
+                          type: string
+                          description: The ID of the survey.
+                        survey_name:
+                          type: string
+                          description: The name of the survey.
+                        project_name:
+                          type: string
+                          description: The name of the project that the survey belongs to.
+                        survey_description:
+                          type: string
+                          description: A description of the survey.
+                        surveying_method:
+                          type: string
+                          description: The method of surveying, e.g. in-person, phone.
+                        irb_approval:
+                          type: string
+                          description: The status of the IRB approval, e.g. Yes, No, Pending.
+                        planned_start_date:
+                          type: string
+                          description: The planned start date of the survey in ISO 8601 format.
+                        planned_end_date:
+                          type: string
+                          description: The planned end date of the survey in ISO 8601 format.
+                        state:
+                          type: string
+                          description: The state of the survey, e.g. Draft, Active, Past.
+                        last_updated_at:
+                          type: string
+                          description: The date and time that the survey was last updated in ISO 8601 format.
+                  success:
+                    type: boolean
+                    description: Indicates whether the request was successful.
+        "404":
+          description: No surveys found for the specified user or all users.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    description: A message indicating that no surveys were found.
+                  success:
+                    type: boolean
+                    description: Indicates whether the request was successful.
   /forms/{form_uid}:
     get:
       summary: Get forms
